--- a/project-ygmall/src/css/index_mall.css
+++ b/project-ygmall/src/css/index_mall.css
@@ -509,7 +509,7 @@
 .all-category .category .adv-promotions img { background: #D3D3D3; width: 240px; height: 146px;}
 
 .all-category .category li.hover .sub-class { display: block;}
-.cate-part { font-size: 12px; display: block; position: absolute; left: 180px; top: 0; z-index: 500; width: 998px; min-height: 419px; border: 1px solid #f7f7f7; border-top: 0; background-color: #f7f7f7; box-shadow: 1px 4px 0 rgba(0,0,0, 0.05); -webkit-transition: top .25s ease; transition: top .25s ease }
+.cate-part { font-size: 12px; display: none; position: absolute; left: 180px; top: 0; z-index: 500; width: 998px; min-height: 419px; border: 1px solid #f7f7f7; border-top: 0; background-color: #f7f7f7; box-shadow: 1px 4px 0 rgba(0,0,0, 0.05); -webkit-transition: top .25s ease; transition: top .25s ease }
 /*Copyright: BIZPOWER*/
 .cate-part-col1 { float: left; width: 740px; padding: 20px 0 10px;}
 .cate-channel { display: block; overflow: hidden; padding-left: 20px; height: 24px;}
