--- a/project-ygmall/src/css/index_mall.css
+++ b/project-ygmall/src/css/index_mall.css
@@ -34,7 +34,7 @@
 .public-top-layout .right dl.hover .top-menu-title .arrow { FILTER: progid:DXImageTransform.Microsoft.BasicImage(rotation=2); -moz-transform: rotate(180deg); -moz-transform-origin: 50% 30%; -webkit-transform: rotate(180deg); -webkit-transform-origin: 50% 30%; -o-transform: rotate(180deg); -o-transform-origin: 50% 30%; transform: rotate(180deg); transform-origin: 50% 30%;}
 .public-top-layout .right .top-menu-con { position: absolute; z-index: 1; filter:alpha(opacity=0); -moz-opacity: 0; opacity:0; top: 0; left: 2px; height: 0; overflow: hidden; border: solid 1px #FFF; background-color: #FFF; -webkit-transition: .2s ease-out; -moz-transition: -webkit-transform .2s ease-out; -o-transition: -webkit-transform .2s ease-out; transition: .2s ease-out; *zoom:1;}
 .public-top-layout .right dl.hover .top-menu-con { top: 35px; filter:alpha(opacity=100); -moz-opacity: 1; opacity: 1; overflow: visible; min-width: 81px; height: auto; border-color: #D6D6D6; -webkit-transition: .2s ease-in-out; -moz-transition: -webkit-transform .2s ease-in-out; -o-transition: -webkit-transform .2s ease-in-out; transition: .2s ease-in-out;}
-.public-top-layout .right .top-menu-con ul { padding: 0 0 5px 0;}
+.public-top-layout .right .top-menu-con ul { padding: 0 8px 0;border-color: #D6D6D6;}
 .public-top-layout .right .top-menu-con ul li a { font-size: 12px; line-height: 24px; display: block; clear: both; padding: 2px 0 2px 10px;}
 .public-top-layout .right .top-menu-con ul li a:hover { text-decoration: none;}
 /*鐧诲綍娉ㄥ唽*/
@@ -296,7 +296,7 @@
 /*灏鹃儴淇敼*/
 .ccti{float:none; clear:both; width: 100%; height:86px; border:1px solid #e3e3e3; border-width: 1px 0px; background: #fff}
 .ccti .ccti-footer{ width: 1000px; height:86px; margin:0 auto; }
-.ccti .ccti-footer i{display: block; float: left; width: 250px; height: 86px; background: url(../img/cti.png) no-repeat}
+.ccti .ccti-footer i{display: block; float: left; width: 250px; height: 86px; background: url(img/cti.png) no-repeat}
 .ccti .ccti-footer i.cti01{background-position: 0px 0px}
 .ccti .ccti-footer i.cti02{background-position: -250px 0px}
 .ccti .ccti-footer i.cti03{background-position: -500px 0px}
